# agar_counting

./: .gitattributes  Makefile  README.md  pyproject.toml  requirements.txt
agar_counting/: __init__.py  config.json  predict_model.py  predict_model_q.py  train_model.py
agar_counting/data/: make_dataset.py
agar_counting/models/: model.py
bacteria_colony_segmentation/: dataloader.py  half_mane_half_cocaine.py  halv_mand_halv_kokain.ipynb  losses.py  metrics.py  mitbullshit.ipynb  model.h5  network.py  resizing.py
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: meps-cqr.ipynb
